fix(server): FIX wrong regex for routing getproject
